<resources>
    <string name="save">Сохранить изменения</string>
    <string name="add">Добавить</string>
    <string name="default_type">Учеба</string>
    <string name="error">Заполни меня</string>
    <string name="app_name">Трекер привычек</string>
    <string name="about_app">О приложении</string>
    <string name="about">Какая-то информация о приложении</string>
    <string-array name="spinner_items">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="label_add">Добавление привычки</string>
    <string name="label_edit">Редактирование привычки</string>
<!--Значения для формы-->
    <string name="name">Название</string>
    <string name="editName">Введите название привычки</string>
    <string name="description">Описание</string>
    <string name="editDescription">Введите описание привычки</string>
    <string name="period">Количество повторений</string>
    <string name="in"> из </string>
    <string name="editPeriod">день</string>
    <string name="priotity">Срочность</string>
    <string name="type">Тип</string>
    <string name="color">Выбор цвета</string>
    <string name="defaultColor">Цвет по умолчанию</string>
    <string name="button_sheet_title">Фильтры</string>
    <string name="button_sheet_sort">Сортировка по приоритету</string>
    <string name="find">Найти</string>
</resources>